<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:orientation="vertical"
    tools:context=".MoveForResultActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/tvLikeNumber"
        android:textColor="#373232"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rg_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <RadioButton
            android:id="@+id/rb_50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/_50"
            android:textColor="#373232"
            android:textColorHint="#FFFFFF"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/_100"
            android:textColor="#373232"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_150"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/_150"
            android:textColor="#373232"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/_200"
            android:textColor="#373232"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_250"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/_250"
            android:textColor="#373232"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnChoose"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:padding="15dp"
        android:text="@string/choose"
        android:textSize="18sp" />

</LinearLayout>